@@ -2,12 +2,14 @@
 
 KNOWN ISSUES:
 * update translations
-
-
-
+* Empty bookmarks view doesn't show text as expected (regression)
 
 
 KNOWN ENHANCEMENT REQUESTS:
+* Show path somehow on search(/ bookmark) to be able to know seperate similar content
+ (same name for instance)
 
+
+KNOWN ENHANCEMENT REQUESTS Postponed to 5.1:
 * Custimizable formats selector w/ classes (needs support for classes in the editors FormatBlock call)
 * Better feedback on custom attribute validation ( fork TinyMCE validation and enhance it? )
